--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>iEducate - Transforming Online Education-</title>
 </head>
 <body id = "ab">
     <nav class="navbar background h-nav-resp " style="display: flex " id = "a1">
         <ul class="nav-list v-class-resp" id = "a2">
-            <div class="logo"><img src="img/logo.jpg" alt="logo"></div>
+            <div class="logo"><img src="logo.jpg" alt="logo"></div>
             <li><a href = "#">Home</a></li>
             <li><a href = "#About">About</a></li>
             <li><a href = "#services">Services</a></li>
@@ -38,7 +38,7 @@
                 </div>
             </div>
             <div class="secondhalf">
-                <img src="img/logo.jpg" alt="logo">
+                <img src="logo.jpg" alt="logo">
             </div>
         </div>
     </section>
@@ -57,7 +57,7 @@
         </p>
         </div>
         <div class="thumbnail">
-            <img src="img/firstsec.jpg" alt="logo" class="imgfluid1">
+            <img src="firstsec.jpg" alt="logo" class="imgfluid1">
         </div>
     </section>
     <section class="section section-left">
@@ -70,7 +70,7 @@
         </p>
         </div>
         <div class="thumbnail">
-            <img src="img/secondsec.jpg" alt="logo" class="imgfluid2">
+            <img src="secondsec.jpg" alt="logo" class="imgfluid2">
         </div>
     </section>
     <section class="section" id = "services" >
@@ -83,7 +83,7 @@
         </p>
         </div>
         <div class="thumbnail">
-            <img src="img/thirdsec.jpg" alt="logo" class="imgfluid3">
+            <img src="thirdsec.jpg" alt="logo" class="imgfluid3">
         </div>
     </section>
     <hr>
@@ -112,7 +112,7 @@
 
         
     </footer>
-    <script src ="js/resp.js"></script>
+    <script src ="resp.js"></script>
 </body>
 
 </html>
